--- a/lab 4/templates/index.html
+++ b/lab 4/templates/index.html
@@ -22,40 +22,41 @@
             <fieldset>
                 <legend>Registrera medlemsuppgifter</legend>
                 <label>Betalsätt: 
-                    <select name="paymenttype">
-                        <option value="-1">Välj betalsätt</option>
-                        <option value="1" >Kreditkort</option>
-                        <option value="2" >Swish</option>
-                        <option value="3" >Cash mannen</option>
+                    <select name="Betalningsmetod: ">
+                        <option seclected disable hidden value="none">Välj betalsätt</option>
+                        <option> Kreditkort</option>
+                        <option> Swish</option>
+                        <option> Cash mannen</option>
+                        <option> Bitcoin</option>
                     </select>
                 </label>
                 <label>
                     Förnamn:
-                    <input type="text" name="fname" />
+                    <input type="text" name="Förnamn:" required/>
                 </label>
                 <label>
                     Efternamn:
-                    <input type="text" name="ename" />
+                    <input type="text" name="Efternamn:" required/>
                 </label>
                 <label>
                     Adress:
-                    <input type="text" name="address" />
+                    <input type="text" name="Address:" required/>
                 </label>
                 <label>
                     Postnummer:
-                    <input type="text" name="zipcode" />
+                    <input type="number" name="Postnummer:" required/>
                 </label>
                 <label>
                     Ort:
-                    <input type="text" name="city" />
+                    <input type="text" name="Stad:" required/>
                 </label>
                 <label>
                     Mobilnummer:
-                    <input type="text" name="cellphone" />
+                    <input type="number" name="Mobilnummer:" required/>
                 </label>
                 <label>
                     E-mail:
-                    <input type="email" name="email" />
+                    <input type="email" name="E-mail:" required/>
                 </label>
                 <label>
                     Erbjudanden via e-post: <input type="checkbox" name="offers" value="offers" />
@@ -66,40 +67,12 @@
                 </p>
                 <label>
                     Dina kommentarer:
-                    <textarea cols="20" rows="3" name="comment"></textarea>
+                    <textarea cols="20" rows="3" name="Kommentar:"></textarea>
                 </label>
-                <input type="button" class="submit" name="submit" value="Skicka" />
+                <input type="submit" value="Skicka" />
+                <input type="reset" value="Rensa" />
             </fieldset>
         </form>
     </div>
-
-<script>
-    const sendData = async (url = '', data = {}) => {
-        const response = await fetch(url, {
-            method: 'POST', // *GET, POST, PUT, DELETE, etc.
-            mode: 'cors', // no-cors, *cors, same-origin
-            cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-            credentials: 'same-origin', // include, *same-origin, omit
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            redirect: 'follow', // manual, *follow, error
-            body: JSON.stringify(data) // body data type must match "Content-Type" header
-        });
-        return await response.json(); // parses JSON response into native JavaScript objects
-    }
-
-    document.querySelector('.submit').addEventListener('click', (e) => {
-        const form = document.querySelector('form');
-        const postData = Object.values(form).reduce((obj,field) => { obj[field.name] = field.value; return obj }, {});
-        console.log(postData);
-        sendData('http://localhost:5000/postjson/', postData)
-            .then((data) => {
-            console.log(data); // JSON data parsed by `response.json()` call
-        });
-        return false;
-    });
-
-</script>    
 </body>
 </html>
